Corrected the submit button hidden under footer

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
 
+  margin-top: -12rem;
+
+
   flex: 1;
   min-height: 77.8vh;
 
